[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpact"
version = "0.1.1"
description = "Python client for the AgentPact API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
